style: make sure vertical-align of Pagination item-jumper's icon is cneter

--- a/components/Pagination/style/index.less
+++ b/components/Pagination/style/index.less
@@ -106,6 +106,9 @@
   }
 
   &-item-jumper {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     font-size: @pagination-size-icon-ellipsis;
   }
 
